# AskDocs_AI

./: .gitignore  README.md  a.rag_basics.py  app.py  chains_extended.py  chains_under_thehood.py  chat_model_alternative.py  chat_model_basic.py  chat_model_realtime.py  chat_model_save_history.py  prompt_template_basic.py  pyproject.toml  rag_basics.py  requirements.txt  test.py
chat_models/: chat_model.py  chat_model_alternative.py
db/cheoma_db/: chroma.sqlite3
practice/chains/: chains_basic.py  chains_branching.py  chains_parallel.py
practice/chat_models/: chat_model_save_history.py
practice/prompt_templates/: prompt_template_chatmodel.py
